--- a/styles/main.css
+++ b/styles/main.css
@@ -85,9 +85,11 @@ nav{
     flex-direction: column;
     justify-content: space-between;
     position: fixed;
-    min-height: calc(100vh - var(--navbar-height));
+    
     right:-120%;
     top: var(--navbar-height);
+    bottom: 0;
+    overflow: scroll;
     background-color: #000000;
     width: 447px;
     max-width: 100vw;
@@ -120,7 +122,7 @@ nav{
 }
 /*MAIN*/
 main{
-    min-height: calc(100vh - var(--navbar-height));
+    min-height: 100vh;
 }
 .main__container{
     display: flex;
@@ -128,8 +130,8 @@ main{
     align-items: center;
     background-color: rgb(41, 65, 171);
     background-image: url("https://www-growth.scdn.co/static/home/bursts-tablet.svg");
-    background-position: bottom;
-    background-size: 160%;
+    background-position: center;
+    background-size: 190%;
     background-repeat: no-repeat;
     min-height: inherit;
 }
@@ -145,6 +147,7 @@ main{
     font-size: 4.2rem;
     color: #1ed760;
     margin-bottom: 1.6rem;
+    padding-top: 5rem;
 }
 .main__content p{
     color: #1ed760;
@@ -186,7 +189,7 @@ footer{
 }
 .footer__content__links ul li a{
     color: #FFFFFF;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 .footer__content__links ul li{
     padding-bottom: 1.5rem;
@@ -259,7 +262,9 @@ footer{
     }
 }
 @media screen and (min-width:768px) {
-
+    nav{
+        overflow: hidden;
+    }
     .footer__content__links{
         display: grid;
         grid-template-columns: repeat(3,1fr);
