--- a/styles/main.css
+++ b/styles/main.css
@@ -89,7 +89,7 @@ nav{
     right:-120%;
     top: var(--navbar-height);
     bottom: 0;
-    overflow: scroll;
+    
     background-color: #000000;
     width: 447px;
     max-width: 100vw;
@@ -259,6 +259,15 @@ footer{
 }
 .location span{
     color: #FFFFFF;
+}
+.link__navbar:hover{
+    color: #2DE26D;
+}
+@media screen and (max-height:440px) {
+
+    nav{
+        overflow: scroll;
+    }
 }
 @media screen and (max-width:768px) {
 
